--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "make test"
   },
+	"dependecies" : {
+		'request' : '>=2.21.0'
+	},
   "repository": {
     "type": "git",
     "url": "https://github.com/andrija-hers/hersclient.git"
