--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "make test"
   },
 	"dependecies" : {
-		'request' : '>=2.21.0'
+		"request" : ">=2.21.0"
 	},
   "repository": {
     "type": "git",
